--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+portable-pty = "0.8"
+crossterm = "0.27"
+ratatui = "0.26"
+tokio = { version = "1", features = ["full"] }
+anyhow = "1"
